# MYSC-Core

./: LICENSE  README.md  pyproject.toml
src/mysc_core/: __init__.py  audio.py  connection.py  control.py  defs.py  device.py  proxy.py  session.py  video.py
src/mysc_core/utils/: __init__.py  keys.py  params.py  storage.py  vector.py
